# cookiecutter-python-pdm

./: README.md  cookiecutter.json  noxfile.py  pyproject.toml
{{cookiecutter.project_name}}/: README.md  noxfile.py  pyproject.toml
{{cookiecutter.project_name}}/nox_extra/: nox_utils.py
{{cookiecutter.project_name}}/src/{{cookiecutter.package_name}}/: main.py
