[project]
name = "cookiecutter-python-pdm"
version = "0.1.0"
description = "Default template for PDM package"
authors = [{ name = "redjax", email = "none@none.com" }]
dependencies = [
]
requires-python = "==3.11.*"
readme = "README.md"
license = { text = "MIT" }


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "nox>=2024.4.15",
    "uv>=0.4.18",
    "cookiecutter>=2.6.0",
]
